--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello Coursera!</title>
+		<title>Hello Dinos!</title>
 	</head>
 	<body>
-		<h1>Hello Coursera!!</h1>
+		<h1>Hello my darling!! Life seems to be good today!</h1>
 	</body>
 </html>	
