--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello Dinos!</title>
+		<meta charset="utf-8">
+		<title>Hello me loves Luke!</title>
 	</head>
 	<body>
-		<h1>Hello my darling!! Life seems to be good today!</h1>
+		<h1>Hello my darling! You are a tabby... </h1>
 	</body>
 </html>	
