--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,129 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style>
+		
+		p{
+		color:blue;
+		font-size:20px;
+		width:500px;
+		}
+		
+		</style>
+	
+	
+	
 		<meta charset="utf-8">
 		<title>Hello me loves Luke!</title>
 	</head>
 	<body>
-		<h1>Hello my darling! You are a tabby... </h1>
+		<h1>Hello my darling! You are a tabby... &lt;3 </h1>
+		<h3>Hello&nbsp;my darling! You are a tabby... &copy;</h3>
+		
+		<h1 id="top"> Links to the sections of the page</h1>
+		<section>
+			<ul>
+			<!-- link to the sections of the page -->
+			<li><a href="#section1">#section1</a></li>
+			<li><a href="#section2">#section2</a></li>
+			<li><a href="#my3rdList">My 3rd List</a></li>
+			</ul>
+		</section>
+		
+		<section id="section1">
+		<div>
+		<ul>
+		My list:
+		 <li>milk</li>
+		 <li>bread</li>
+		 <li>chocolate
+			<ol>
+		   <li>dark chocolate</li>
+		   <li>white chocolate</li>
+		   </ol>
+		   </li>
+		<li>cream</li>
+		</ul>
+		
+		</div>
+		</section>
+		
+		<a href="same-directory.html" title="same dir link">
+		Linking a file with the same directory</a>
+		
+		<a href="same-directory.html" title="same dir link">
+		<div>DIV Linking a file with the same directory</div></a>
+		<p>
+		Let's link to Youtube!
+		<a href="https://www.youtube.com" target="_blank" title "Watch this!">
+		Youtube page</a>
+		</p>
+		
+		<section id="section2">
+		<div>
+		<ul>
+		My 2nd list:
+		 <li>yogurt</li>
+		 <li>apple sauce</li>
+		 <li>more chocolate
+			<ol>
+		   <li>dark chocolate</li>
+		   <li>white chocolate</li>
+		   </ol>
+		   </li>
+		<li>vinegar</li>
+		</ul>
+		
+		</div>
+		</section>
+		
+		<p>
+		<img src="111.png" width="400" height="235"
+		alt="Picture with a quote">		
+		Okay, so we're looking at images.html,
+		which is located in the examples Lecture10 folder.
+		And you may recognize this file from a few lectures ago where this is a famous
+		quote from Theodore Roosevelt.
+		And, by the way, I apologize, I made a typo before.
+		Theodore Roosevelt is spelled with an E.
+		So for you eagle eyes out there who noticed that I misspelled Theodore I
+		apologize.
+		It was just a typo.
+		Anyway our task here is to display an image right before the quote itself.
+		And we actually have a couple of images here.
+		And since I wanted to start with one, let me comment this one out, and
+		at the same time show you what an HTML comment looks like.
+		And it's pretty simple, it starts with a less than bracket, exclamation point,
+		dash, dash, and then it gets closed with a dash, dash, right angle bracket.
+		And what will happen when you load this page into the browser
+		Is that the browser will completely ignore this comment and will not render it.
+		So let's take a look at the image tag that we wanted to discuss.
+		The image is displayed in HTML using this img tag which is just short for image.
+		And the src attribute of the img tag is a URL that points to some image file.
+		</p>
+		
+		<img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-1/p160x160/15380529_1175474215863054_8386550392944068364_n.jpg?_nc_cat=101&_nc_ht=scontent-arn2-1.xx&oh=a4c247c2e5639b01fb37f100a0571134&oe=5CC70A0D" 
+		width="280" height="280">
+		<section id="my3rdList">
+		<h3> This is my 3rd list</h3>
+		<div>
+		<ul>
+		My 3rd list:
+		 <li>eggs</li>
+		 <li>crisps</li>
+		 <li>Juice
+			<ul>
+		   <li>Orange juice</li>
+		   <li>Lemonade</li>
+		   </ul>
+		   </li>
+		<li>Cheese</li>
+		</ul>
+		
+		</div>
+		</section>
+		
+		
+		<p> Back to the top: <a href="#top"> Back to the top</a></p>
 	</body>
 </html>	
